Added a profile page (clicking on the username in the topbar) where the user can change the password/e-mail of his account.

--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -152,6 +152,7 @@ button:hover {
 	-webkit-border-radius:4px;
 	background-color:#ffcccc;
 	padding:5px;
+	text-align:left;
 }
 .error_tr input {
 	border-color:red;
