--- a/comicagg/templates/accounts/password_change_form.html
+++ b/comicagg/templates/accounts/password_change_form.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans 'Password change'%}{% endblock %}
+{% block title %}{% trans 'Password change'%} -{% endblock %}
 {% block content %}
 <div class="loginbox">
   <h3>{% trans 'Password change'%}</h3>
@@ -15,7 +15,7 @@
   </div>
   {% endif %}
   <form action="{% url accounts:password_change %}" method="post">{% csrf_token %}
-    <table style="margin-left:auto;margin-right:auto">
+    <table style="margin-left:auto;margin-right:auto" class="text_left">
       <tr {% if form.old_password.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Current password'%}</label></td>
         <td>{{ form.old_password }}</td>
@@ -42,6 +42,6 @@
   </form>
   <br />
   <p>{% trans "If you can't remember your current password, use the password reset page" %} <a href="{% url accounts:password_reset %}">{% trans "here" %}</a></p>
-  <a href="{% url index %}">{% trans 'Go back'%}</a>
+  <a href="{% url accounts:profile %}">{% trans 'Go back'%}</a>
 </div>
 {% endblock %}
