Open comic's web site when clicking the strip

--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -45,11 +45,11 @@
 		{% else %}
 			{% for unread in unreadlist %}
 			{% ifchanged %}<h4>{{ unread.history.date|date:"d F Y" }}</h4>{% endifchanged %}
-			<img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/><br/>
+			<a onclick="openurl('{{ comic.url|safe }}')"><img id="imgu{{ unread.id }}" src="{{ mediaurl }}images/striploading.gif" alt="new - loading..." title="{{ unread.history.alt_text|default_if_none:""|safe }}"/></a><br/>
 			<div class="alttext">{{ unread.history.alt_text|default_if_none:""|safe }}</div>
 			{% empty %}
 			<h4>{{ comic.last_check|date:"d F Y" }}</h4>
-			<img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/>
+			<a onclick="openurl('{{ comic.url|safe }}')"><img id="imgl{{ comic.id }}" src="{{ mediaurl }}images/striploading.gif" alt="last - loading..." title="{{ comic.last_image_alt_text|default_if_none:""|safe }}"/></a>
 			<div class="alttext">{{ comic.last_image_alt_text|default_if_none:""|safe }}</div>
 			{% endfor %}
 		{% endif %}
