--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -85,5 +85,11 @@
 	{% endfor %}
 	<div id="noComicsSelected" style="display:none" class="box">{% trans "No comics to show here. Use the menu in the top to add comics." %}</div>
 	</div>
+    {% if unread_count %}
+    <div class="top_info text_center">
+            <a onclick="mark_all_read()">{% trans "Mark all comics as read" %}</a>
+            <img style="display:none" id="mark_all_read_anim" src="{{ mediaurl }}images/loaderarrows.gif" alt="working"/>
+    </div>
+    {% endif %}
 </div>
 {% endblock %}
