--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -36,6 +36,7 @@
 	</head>
 	<body onload="{% block onload %}{% endblock %}">
 		<div id="head">
+			{% if user.is_superuser or not settings.MAINTENANCE %}
 			{% if user.is_authenticated %}
 			<div id="head_right">
 				<a href="{% url accounts:profile %}"><i><b>{{ user.username }}</b></i></a>&nbsp;&nbsp;-&nbsp;&nbsp;<span class=""><a href="{% url news:index %}">{% trans "news" %}<span id="menuNewsCounter">{% if news_count %} ({{ news_count}}){% endif %}</a></span>&nbsp;&nbsp;{% if user.is_staff %}<span class=""><a href="/admin/">{% trans "admin" %}</a></span>&nbsp;&nbsp;{% endif %}<span class=""><a href="{% url contact %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:logout %}">{% trans "logout" %}</a></span>
@@ -48,6 +49,7 @@
         <span class=""><a href="{% url news:index %}">{% trans "news" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url contact %}">{% trans "contact" %}</a></span>&nbsp;&nbsp;<span class=""><a href="{% url accounts:login %}">{% trans "login" %}</a></span>
       </div>
       <div id="head_left">&nbsp;</div>
+			{% endif %}
 			{% endif %}
 			<div id="branding">
 				<a href="/">Comic Aggregator</a>
