Changed maintenance message. Updated translations.

--- a/comicagg/templates/maintenance.html
+++ b/comicagg/templates/maintenance.html
@@ -2,6 +2,6 @@
 {% load i18n %}
 {% block content %}
 <div id="maintenance" class="loginbox">
-<p>{% trans "Site is under permanent maintenance. Use www.comicagg.com to read your comics." %}
+<p>{% trans "Site is under maintenance." %}
 </div>
 {% endblock %}
