Adapted the display of the login page to a less wider one when the login request is coming from a OAuth2 page

--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -115,6 +115,10 @@ button:hover {
 	border-color: #7cb9ff;
 	border-color: #8baec1;
 }
+.oauth2_box {
+	min-width:450px;
+	width: auto;
+}
 #login_wrap {
 	margin-top:20px;
 }
