--- a/comicagg/templates/agregator/organize_add.html
+++ b/comicagg/templates/agregator/organize_add.html
@@ -2,7 +2,7 @@
 {% load i18n agregator_tags %}
 {% block title %}{% trans 'Choose' %} - {% endblock %}
 {% block extra_head %}
-		<script src="http://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
 		<script src="{{ mediaurl}}js/organize_add.js" type="text/javascript"></script>
 		<script type="text/javascript">
 var usercomics = [
