--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -42,8 +42,7 @@ input, button {
 	background-color:#f0f0f0;
 	color:#333;
 	border:1px solid gray;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
+        border-radius:5px;
 	padding:1px 3px;
 }
 button:hover {
@@ -103,8 +102,7 @@ button:hover {
 
 .loginbox, .box {
 	border:1px gray solid;
-	-moz-border-radius:15px;
-	-webkit-border-radius:15px;
+        border-radius:15px;
 	background-color:white;
 	width:500px;
 	margin:10% auto 0px auto;
@@ -128,8 +126,7 @@ button:hover {
 }
 .loginbox input {
 	border:1px solid gray;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
+	border-radius:3px;
 	padding:2px;
 }
 .loginbox input:focus {
@@ -152,8 +149,7 @@ button:hover {
 
 #errorContainer {
 	border:1px solid red;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;
+	border-radius:4px;
 	background-color:#ffcccc;
 	padding:5px;
 	text-align:left;
@@ -183,8 +179,7 @@ button:hover {
 #read .comic {
 	border:1px solid gray;
 	background-color:white;
-	-moz-border-radius:10px;
-	-webkit-border-radius:10px;
+	border-radius:10px;
 	padding:5px 1em 5px 1em;
 	margin-bottom:20px;
 /* 	position:relative; */
@@ -237,8 +232,7 @@ button:hover {
 	border:1px solid #eeeeee;
 	padding:2px;
 	margin-bottom:10px;
-	-moz-border-radius:4pt;
-	-webkit-border-radius:4pt;
+	border-radius:4pt;
 /* 	z-index:-10; */
 }
 #read .top_info div {
@@ -258,8 +252,7 @@ button:hover {
     background-color: white;
     border:1px solid gray;
     padding:2px;
-    -moz-border-radius:4pt;
-    -webkit-border-radius:4pt;
+    border-radius:4pt;
 }
 
 /******************/
@@ -269,8 +262,7 @@ button:hover {
 #organize .comic_list {
 	font-size:9pt;
 	border:1px solid gray;
-	-moz-border-radius:8pt;
-	-webkit-border-radius:8pt;
+	border-radius:8pt;
 	padding:5px;
 /* 	line-height:14pt; */
 	background:white;
@@ -294,8 +286,7 @@ button:hover {
 	border:1px solid gray;
 	padding:2px 12px;
 	margin:0px 3px 3px 0px;
-	-moz-border-radius:5pt 5pt;
-	-webkit-border-radius:5pt 5pt;
+	border-radius:5pt 5pt;
 }
 #organize .dojoDndItemOver {
 	background: #ededed;
@@ -322,8 +313,8 @@ button:hover {
 #organize .dojoDndAvatar {
 	border:2px solid #ccc;
 	font-size: 75%;
-	-moz-border-radius:8pt 8pt;
 	radius:8pt;
+	border-radius:8pt 8pt;
 	background:white;
 }
 #organize .dojoDndAvatarHeader {
@@ -437,8 +428,7 @@ button:hover {
     padding:3px 8px;
 	background:white;
 	border:1px solid gray;
-	-moz-border-radius:8px;
-	-webkit-border-radius:8px;
+	border-radius:8px;
 	min-height:200px;
 }
 #comic_info h3 {
@@ -516,8 +506,7 @@ input.filter {
     font-weight:bolder;
     border:1px solid gray;
     background-color:#BEFFB8;
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
+    border-radius:5px;
     padding:3px 6px;
     width:300px;
     margin-top:1em;
@@ -552,8 +541,7 @@ input.filter {
 #blog .post {
     padding:4px;
     margin:0px 10px 10px 0px;
-    -moz-border-radius:5px;
-    -webkit-border-radius:5px;
+    border-radius:5px;
 }
 #blog .new_post {
     background-color:#F4F4E9;
