--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -167,6 +167,19 @@ button:hover {
 .errorlist li {
 }
 
+.box fieldset {
+	border:0;
+}
+
+.box ul {
+	padding:5px;
+	text-align: left;
+    	width: 100px;
+    	margin-left: auto;
+    	margin-right: auto;
+
+}
+
 /*************/
 /* Read page */
 /*************/
