Show a message when there are no unread comics to read

--- a/comicagg/templates/agregator/read.html
+++ b/comicagg/templates/agregator/read.html
@@ -91,5 +91,8 @@
             <img style="display:none" id="mark_all_read_anim" src="{{ mediaurl }}images/loaderarrows.gif" alt="working"/>
     </div>
     {% endif %}
+    <div id="no_unread_comics" class="top_info text_center" style="display:none">
+        <p>{% trans "You don't have any new unread comics" %}</p>
+    </div>
 </div>
 {% endblock %}
