--- a/comicagg/media/css/base.css
+++ b/comicagg/media/css/base.css
@@ -113,10 +113,6 @@ button:hover {
 	border-color: #7cb9ff;
 	border-color: #8baec1;
 }
-.oauth2_box {
-	min-width:450px;
-	width: auto;
-}
 #login_wrap {
 	margin-top:20px;
 }
@@ -167,17 +163,19 @@ button:hover {
 .errorlist li {
 }
 
+.oauth2_box {
+	width:450px;
+	margin:15px auto;
+}
 .oauth2_box fieldset {
 	border:0;
 }
 
 .oauth2_box ul {
 	padding:5px;
-	text-align: left;
-    	width: 100px;
-    	margin-left: auto;
-    	margin-right: auto;
-
+	padding-left:40px;
+	width:170px;
+	margin:10px auto;
 }
 
 /*************/
