Fix an issue with the width of the oauth2 authorization page

--- a/comicagg/templates/simple_base.html
+++ b/comicagg/templates/simple_base.html
@@ -18,7 +18,7 @@
 		</script>
 {% block extra_head %}{% endblock %}
 	</head>
-	<body onload="{% block onload %}{% endblock %}" class="oauth2_box">
+	<body onload="{% block onload %}{% endblock %}" class="oauth2_page">
 		<div id="head">
 			{% if user.is_superuser or not settings.MAINTENANCE %}
 			{% endif %}
