--- a/comicagg/templates/accounts/login_form.html
+++ b/comicagg/templates/accounts/login_form.html
@@ -6,6 +6,8 @@
 {% block done-content %}{% endblock %}
 {% if oauth2 %}
 <div id="login_wrap" class="oauth2_box">
+	<h1>Comic Aggregator</h1>
+	<br/>
         <h3>{% trans 'Login into your account to authorize an application'%}</h3>
         <p>{% trans 'Write your username and passwod to get you logged in.'%}</p>
         {% if error %}
