--- a/comicagg/templates/comics/organize_organize.html
+++ b/comicagg/templates/comics/organize_organize.html
@@ -1,5 +1,5 @@
-{% extends 'agregator/organize_base.html' %}
-{% load i18n agregator_tags %}
+{% extends 'comics/organize_base.html' %}
+{% load i18n comics_tags %}
 {% block title %}{% trans 'Organize' %} - {% endblock %}
 {% block extra_head %}
         <link rel="stylesheet" href="{{ mediaurl }}css/dnd.css" type="text/css"/>
