--- a/comicagg/templates/comics/read.html
+++ b/comicagg/templates/comics/read.html
@@ -15,8 +15,8 @@
 {% endfor %}
 {% for comic,unreadlist in comic_list %}
 	tmp = [];
-	{% if not comic.noimages or perms.agregator.all_images %}{% for unread in unreadlist %}tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "chid":{{ unread.history.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:"" }}"});{% endfor %}{% endif %}
-	c = {"name":"{{ comic.name }}", "id":{{ comic.id }}, {% if not comic.noimages or perms.agregator.all_images %}"last_url":"{{ comic.get_url|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp, {% endif %}"error":false, "loaded":false, "last_ch":{{ comic.comichistory_set.all.0.id|default:0 }}};
+	{% if not comic.noimages or perms.comics.all_images %}{% for unread in unreadlist %}tmp.push({"unreadid":{{ unread.id }}, "comicid":{{ comic.id }}, "chid":{{ unread.history.id }}, "url":"{{ unread.history.get_url|safe }}", "alt_text":"{{ unread.history.alt_text|default_if_none:"" }}"});{% endfor %}{% endif %}
+	c = {"name":"{{ comic.name }}", "id":{{ comic.id }}, {% if not comic.noimages or perms.comics.all_images %}"last_url":"{{ comic.get_url|safe }}", "last_alt_text":"{{ comic.last_image_alt_text|default_if_none:"" }}", "list":tmp, {% endif %}"error":false, "loaded":false, "last_ch":{{ comic.comichistory_set.all.0.id|default:0 }}};
 	comics[{{ comic.id }}] = c;
 {% endfor %}
 </script>
@@ -40,7 +40,7 @@
 		<h3>{{ comic.name }}</h3>
 		{% if unreadlist %}<span id="newnotice{{ comic.id }}" class="newstripsnotice">{% trans "New strips!" %}</span>{% endif %}
 		<div class="striplist">
-		{% if comic.noimages and not perms.agregator.all_images %}
+		{% if comic.noimages and not perms.comics.all_images %}
 			{% blocktrans with comic.url as url %}The comic has been updated. <a href="{{ url }}">Click here</a> to go to the comic's website.{% endblocktrans %}
 		{% else %}
 			{% for unread in unreadlist %}
