--- a/comicagg/templates/ws/user_subscriptions.html
+++ b/comicagg/templates/ws/user_subscriptions.html
@@ -1,5 +1,5 @@
 {% extends 'ws/base_xml.html' %}
-{% load agregator_tags %}
+{% load comics_tags %}
 {% block content %}
 {% spaceless %}
 <subscriptions user="{{ user }}">
