--- a/comicagg/templates/admin/check.html
+++ b/comicagg/templates/admin/check.html
@@ -3,7 +3,7 @@
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% load adminmedia %}{% admin_media_prefix %}css/dashboard.css" />{% endblock %}
 
-{% block breadcrumbs %}<div class="breadcrumbs"><a href="/admin/">Inicio</a> &rsaquo; <a href="{% url aggregator:admin:check %}">{% trans "Update comic"%}</a></div>{% endblock %}
+{% block breadcrumbs %}<div class="breadcrumbs"><a href="/admin/">Inicio</a> &rsaquo; <a href="{% url comics:admin:check %}">{% trans "Update comic"%}</a></div>{% endblock %}
 
 {% block content %}
 <div id="content-main">
@@ -25,7 +25,7 @@
 <div id="{{ k }}">
     <h4>{{ k }}</h4>
     {% for comic in l %}
-    <a href="{% url aggregator:admin:check_id comic.id %}">{{ comic.name }}</a><br/>
+    <a href="{% url comics:admin:check_id comic.id %}">{{ comic.name }}</a><br/>
     {% endfor %}
 </div>
 {% endfor %}
