--- a/comicagg/templates/admin/index.html
+++ b/comicagg/templates/admin/index.html
@@ -43,7 +43,7 @@
     {% endfor %}
     <div id="other_actions">
       <h1>{% trans "Other actions" %}</h1>
-      <a href="{% url aggregator:admin:check %}">{% trans 'Update a comic' %}</a><br/>
+      <a href="{% url comics:admin:check %}">{% trans 'Update a comic' %}</a><br/>
     </div>
 {% else %}
     <p>{% trans "You don't have permission to edit anything." %}</p>
