--- a/comicagg/templates/comics/organize_add.html
+++ b/comicagg/templates/comics/organize_add.html
@@ -1,8 +1,8 @@
-{% extends 'agregator/organize_base.html' %}
-{% load i18n agregator_tags %}
+{% extends 'comics/organize_base.html' %}
+{% load i18n comics_tags %}
 {% block title %}{% trans 'Choose' %} - {% endblock %}
 {% block extra_head %}
-		<script src="https://ajax.googleapis.com/ajax/libs/dojo/1.4/dojo/dojo.xd.js" type="text/javascript"></script>
+		<script src="{{ mediaurl }}js/lib/dojo/dojo.js" type="text/javascript"></script>
 		<script src="{{ mediaurl}}js/organize_add.js" type="text/javascript"></script>
 		<script type="text/javascript">
 var usercomics = [
