--- a/comicagg/templates/accounts/login_form.html
+++ b/comicagg/templates/accounts/login_form.html
@@ -15,7 +15,7 @@
         {% endif %}
         <div class="text_left">
                 <div id="error"></div>
-                <form method="post" action="{% url accounts:login %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
+                <form method="post" action="{% url 'accounts:login' %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
                         <table>
                                 <tr>
                                         <td><label class="small_text">{% trans 'User '%}</label></td>
@@ -31,8 +31,8 @@
                         </table>
                 </form>
         </div>
-        <p>{% trans "Don't you have an account?" %} <a href="{% url accounts:register %}">{% trans "Create one" %}</a></p>
-        <p>{% trans "Can't remember your password?" %} <a href="{% url accounts:password_reset %}">{% trans 'Send me a new password'%}</a></p>
+        <p>{% trans "Don't you have an account?" %} <a href="{% url 'accounts:register' %}">{% trans "Create one" %}</a></p>
+        <p>{% trans "Can't remember your password?" %} <a href="{% url 'accounts:password_reset' %}">{% trans 'Send me a new password'%}</a></p>
 </div>
 {% else %}
 <p class="loginbox">{% trans "Comic Aggregator allows you to read lots and lots of webcomics in the same page." %}</p>
@@ -44,7 +44,7 @@
 	{% endif %}
 	<div class="text_left">
 		<div id="error"></div>
-		<form method="post" action="{% url accounts:login %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
+		<form method="post" action="{% url 'accounts:login' %}" enctype="application/x-www-form-urlencoded">{% csrf_token %}
 			<table>
 				<tr>
 					<td><label class="small_text">{% trans 'User '%}</label></td>
@@ -60,8 +60,8 @@
 			</table>
 		</form>
 	</div>
-	<p>{% trans "Don't you have an account?" %} <a href="{% url accounts:register %}">{% trans "Create one" %}</a></p>
-	<p>{% trans "Can't remember your password?" %} <a href="{% url accounts:password_reset %}">{% trans 'Send me a new password'%}</a></p>
+	<p>{% trans "Don't you have an account?" %} <a href="{% url 'accounts:register' %}">{% trans "Create one" %}</a></p>
+	<p>{% trans "Can't remember your password?" %} <a href="{% url 'accounts:password_reset' %}">{% trans 'Send me a new password'%}</a></p>
 </div>
 {% endif %}
 {% endblock %}
