--- a/comicagg/templates/accounts/password_change_form.html
+++ b/comicagg/templates/accounts/password_change_form.html
@@ -14,7 +14,7 @@
     </ul>
   </div>
   {% endif %}
-  <form action="{% url accounts:password_change %}" method="post">{% csrf_token %}
+  <form action="{% url 'accounts:password_change' %}" method="post">{% csrf_token %}
     <table style="margin-left:auto;margin-right:auto" class="text_left">
       <tr {% if form.old_password.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Current password'%}</label></td>
@@ -41,7 +41,7 @@
     <input type="submit" value="{% trans 'Change it'%}" />
   </form>
   <br />
-  <p>{% trans "If you can't remember your current password, use the password reset page" %} <a href="{% url accounts:password_reset %}">{% trans "here" %}</a></p>
-  <a href="{% url accounts:profile %}">{% trans 'Go back'%}</a>
+  <p>{% trans "If you can't remember your current password, use the password reset page" %} <a href="{% url 'accounts:password_reset' %}">{% trans "here" %}</a></p>
+  <a href="{% url 'accounts:profile' %}">{% trans 'Go back'%}</a>
 </div>
 {% endblock %}
