--- a/comicagg/templates/accounts/password_reset_form.html
+++ b/comicagg/templates/accounts/password_reset_form.html
@@ -6,7 +6,7 @@
   <h3>{% trans 'Password reset'%}</h3>
   <p class="info">{% trans 'Please enter your username or e-mail address and we will send you a new password via e-mail.'%}</p>
   <br/>
-  <form action="{% url accounts:password_reset %}" method="post">{% csrf_token %}
+  <form action="{% url 'accounts:password_reset' %}" method="post">{% csrf_token %}
     <table>
       <tr {% if form.data.errors %}class="error_tr"{% endif %}>
         <td><label>{% trans 'Your username or email'%}</label></td>
@@ -16,7 +16,7 @@
   {% endif %}
       </tr>
     </table>
-    <p><input type="submit" value="{% trans 'Reset my password'%}" />, <a href="{% url index %}">{% trans 'or go back'%}</a></p>
+    <p><input type="submit" value="{% trans 'Reset my password'%}" />, <a href="{% url 'index' %}">{% trans 'or go back'%}</a></p>
   </form>
 </div>
 {% endblock %}
