--- a/comicagg/templates/accounts/register_done.html
+++ b/comicagg/templates/accounts/register_done.html
@@ -4,5 +4,5 @@
 {% block content %}
 <h3>{% trans 'Register new account'%}</h3>
 <p class="info">{% trans 'Your account has been created. You can now log in using the username you selected.'%}</p>
-<p><a href="{% url index %}">{% trans "Back to login" %}</a></p>
+<p><a href="{% url 'index' %}">{% trans "Back to login" %}</a></p>
 {% endblock %}
