--- a/provider/templates/provider/authorize.html
+++ b/provider/templates/provider/authorize.html
@@ -1,37 +1,45 @@
-{% load scope %}
+{% extends 'simple_base.html' %}
+{% load scope i18n %}
 {% load url from future %}
 {% block content %}
+<div class="text_left oauth2_box">
+    <h1>Comic Aggregator</h1>
+    <br>
     {% if not error %}
-        <p>{{ client.name }} would like to access your data with the following permissions:</p>
-        <ul>
-            {% for permission in oauth_data.scope|scopes %}
-                <li>
-                    {% if permission == "read" %}
-                    Read your data
-                    {% else %}
-                    Write your data
-                    {% endif %}
-                </li>
-            {% endfor %}
-        </ul>
-        <form method="post" action="{% url "oauth2:authorize" %}">
-            {% csrf_token %}
-            {{ form.errors }}
-            {{ form.non_field_errors }}
-            <fieldset>
-                <div style="display: none;" />
-                    <select type="select" name="scope" multiple="multiple">
-                    {% for scope in oauth_data.scope|scopes %}
-                        <option value="{{ scope }}" selected="selected">{{ scope }}</option>
-                    {% endfor %}
-                    </select>
-                </div>
-                <input type="submit" class="btn login large danger" value="Cancel" />
-                <input type="submit" class="btn login large primary" name="authorize" value="Authorize" />
-            </fieldset>
-        </form>
+    <h2>{% trans "Authorize an application" %}</h2>
+    <p>{% blocktrans with client__name=client.name%}<b>{{ client__name }}</b> would like to access your data with the following permissions:{% endblocktrans %}</p>
+    <ul class="text_left">
+        {% for permission in oauth_data.scope|scopes %}
+            <li>
+                {% if permission == "read" %}
+                {% trans "Read your data" %}
+                {% else %}
+                {% trans "Write your data" %}
+                {% endif %}
+                ({{ permission }})
+            </li>
+        {% endfor %}
+    </ul>
+    <form method="post" action="{% url "oauth2:authorize" %}">
+        {% csrf_token %}
+        {{ form.errors }}
+        {{ form.non_field_errors }}
+        <fieldset>
+            <div style="display: none;" />
+                <select type="select" name="scope" multiple="multiple">
+                {% for scope in oauth_data.scope|scopes %}
+                    <option value="{{ scope }}" selected="selected">{{ scope }}</option>
+                {% endfor %}
+                </select>
+            </div>
+            <input type="submit" class="btn login large danger" value="{% trans "Cancel" %}" />
+            <input type="submit" class="btn login large primary" name="authorize" value="{% trans "Authorize"%}" />
+        </fieldset>
+    </form>
     {% else %}
-        {{ error }}
-        {{ error_description }}
+    <h2>{% trans "An error has occurred" %}</h1>
+    <p class="text_left"><b>{% trans "Error code:" %} </b>{{ error }}<br/>
+    {% if error_description %}<b>{% trans "Message:" %} </b>{{ error_description }}</p>{% endif %}
     {% endif %}
+</div>
 {% endblock %}
