Reformat several attributes of the Comic and ComicHistory model

--- a/comicagg/templates/admin/reported.html
+++ b/comicagg/templates/admin/reported.html
@@ -10,7 +10,7 @@
 {% for k,ch in chs.items %}
 {% if ch %}
 <a href="/admin/comics/comichistory/{{ ch.id }}/">comic history id={{ ch.id }}</a><br/>
-<img src="{{ ch.get_url }}" style="width:500px" title="{{ ch.alt_text }}"/><br/>
+<img src="{{ ch.image_url }}" style="width:500px" title="{{ ch.alt_text }}"/><br/>
 {% else %}
 history id:{{ k }} no existe
 {% endif %}
