--- a/comicagg/templates/stats.html
+++ b/comicagg/templates/stats.html
@@ -16,8 +16,8 @@
 			<tr>
 				<td class="left">{{ forloop.counter }}</td>
 				<td class="left">{{ comic.name }}</td>
-				<td>{{ comic.readers }}</td>
-				<td>{{ comic.strips }}</td>
+				<td>{{ comic.reader_count }}</td>
+				<td>{{ comic.strip_count }}</td>
 				<td>{{ comic.votes }}</td>
 				<td>{{ comic.rating }}</td>
 				<td>{{ comic.negative_votes }}</td>
