Added a parameter to the profile's unread_comics method so that a counter of unread strips is added to each comic. Updated the web service unread_user method to use the above method instead of the ugly SQL query.

--- a/comicagg/templates/ws/unread_user.html
+++ b/comicagg/templates/ws/unread_user.html
@@ -1,8 +1,8 @@
 {% extends 'ws/base_xml.html' %}
 {% block content %}{% spaceless %}
 <unread_comics user="{{ username }}" count="{{ count }}">
-{% for comic_id, name, count in unread_list %}
-<comic comic_id="{{ comic_id }}" name="{{ name }}" count="{{ count }}" />
+{% for comic, counter in unread_list %}
+<comic comic_id="{{ comic.id }}" name="{{ comic.name }}" count="{{ counter }}" />
 {% endfor %}
 </unread_comics>
 {% endspaceless %}{% endblock %}
