--- a/comicagg/templates/comics/organize_organize.html
+++ b/comicagg/templates/comics/organize_organize.html
@@ -3,7 +3,7 @@
 {% block title %}{% trans 'Organize' %} - {% endblock %}
 {% block extra_head %}
         <link rel="stylesheet" href="{% static 'base/css/dnd.css' %}" type="text/css"/>
-        <script src="{% static 'base/js/lib/dojo/dojo.js' %}" type="text/javascript"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/dojo/1.4.4/dojo/dojo.js"></script>
         <script src="{% static 'base/js/organize.js' %}" type="text/javascript"></script>
         <script type="text/javascript">
 var usercomics = [];
