--- a/comicagg/templates/base.html
+++ b/comicagg/templates/base.html
@@ -4,6 +4,18 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+        <!--
+        Welcome to...
+                                _
+                               (_)
+          ___  ___   _ __ ___   _   ___  __ _   __ _   __ _
+         / __|/ _ \ | '_ ` _ \ | | / __|/ _` | / _` | / _` |
+        | (__| (_) || | | | | || || (__| (_| || (_| || (_| |
+         \___|\___/ |_| |_| |_||_| \___|\__,_| \__, | \__, |
+                                                __/ |  __/ |
+                                               |___/  |___/
+
+        -->
 		<title>{% block title %}{% endblock %} Comic Aggregator</title>
 		<link rel="stylesheet" href="{% static 'base/css/base.css' %}" type="text/css"/>
 		<link rel="shortcut icon" href="{% static 'base/img/favicon.png' %}" type="image/png" />
