--- a/comicagg/templates/admin/update_comic.html
+++ b/comicagg/templates/admin/update_comic.html
@@ -3,7 +3,7 @@
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static "admin/css/dashboard.css" %}" />{% endblock %}
 
-{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo; <a href="{% url 'comics:admin:check' %}">{% trans "Update comic"%}</a></div>{% endblock %}
+{% block breadcrumbs %}<div class="breadcrumbs"><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo; <a href="{% url 'comics:admin:update_comics' %}">{% trans "Update comic"%}</a></div>{% endblock %}
 
 {% block content %}
 <div id="content-main">
@@ -25,7 +25,7 @@
 <div id="{{ k }}">
     <h4>{{ k }}</h4>
     {% for comic in l %}
-    <a href="{% url 'comics:admin:check_id' comic.id %}">{{ comic.name }}</a><br/>
+    <a href="{% url 'comics:admin:update_comic' comic.id %}">{{ comic.name }}</a><br/>
     {% endfor %}
 </div>
 {% endfor %}
